--- a/foodjardeliveryapp/src/main/AndroidManifest.xml
+++ b/foodjardeliveryapp/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".MyOldOrders"></activity>
+        <activity android:name=".OrderDetails" />
+        <activity android:name=".MyOrders" />
+        <activity android:name=".LoginDeliveryBoy" />
         <activity android:name=".Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
