--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".utils.Home"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -14,12 +13,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".OrderDetails"></activity>
+        <activity android:name=".UserAssignedOrders"/>
+        <activity android:name=".UserPendingOrders" />
+        <activity android:name=".UserOrderDetails" />
         <activity android:name=".ShoppingCart" />
         <activity android:name=".ItemDetail" />
         <activity android:name=".LoginUser" />
         <activity android:name=".RegisterUser" />
-        <activity android:name=".OrderHistory" />
+        <activity android:name=".UserDeliveredOrders" />
         <activity android:name=".SearchItem" />
         <activity android:name=".Splash">
             <intent-filter>
