--- a/foodjaradmin/src/main/AndroidManifest.xml
+++ b/foodjaradmin/src/main/AndroidManifest.xml
@@ -6,7 +6,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".utils.Home"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -15,14 +14,14 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".Offers"/>
-        <activity android:name=".AssignedOrders" />
-        <activity android:name=".DeliveredOrders" />
+        <activity android:name=".AdminAssignedOrders" />
+        <activity android:name=".AdminDeliveredOrders" />
         <activity android:name=".AllStaffMembers" />
         <activity android:name=".AllDeliveryBoys" />
         <activity android:name=".RegisterDeliveryBoy" />
-        <activity android:name=".OrderDetails" />
+        <activity android:name=".AdminOrderDetails" />
         <activity android:name=".AllUsers" />
-        <activity android:name=".PendingOrders" />
+        <activity android:name=".AdminPendingOrders" />
         <activity android:name=".SearchItem" />
         <activity android:name=".RegisterStaff" />
         <activity android:name=".LoginAdmin" />
